# mira-next

./: Cargo.toml
assets/: schema.xsd
assets/ui/: loading-screen.xml  menu-screen.xml  splash-screen.xml  title-screen.xml
src/: main.rs  manager.rs
src/entities/: mod.rs
src/entities/player/: input.rs  mod.rs
src/environment/: mod.rs
src/services/: loading_service.rs  mod.rs
src/ui/: loading_screen.rs  menu_screen.rs  mod.rs  splash_screen.rs  title_screen.rs
