[package]
name = "mira-next"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "mira-next"
path = "src/main.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = true

[dependencies]
bevy_rapier3d = {version = "0.28.0", features = ["simd-stable"]}
bevy_kira_audio = {version = "0.21.0", features = ["ogg"]}
bevy-inspector-egui = {version = "0.28.0"}
bevy_hui = {version = "0.2.1", features = ["default"]}
bevy_third_person_camera = {version = "0.2.0"}
bevy_atmosphere = {version = "0.12.0", features = ["all_models"]}
bevy_image = {version = "0.15.0", features = ["png", "jpeg", "webp"]}

#rand = {version = "0.8.5"}
image = {version = "0.25.5", features = ["png"]}
winit = {version = "0.30.5"}
# toml = {version = "0.8.19"}
serde = {version = "1.0.216", features = ["derive"]}

[dependencies.bevy]
version = "0.15.0"
default-features = true
features = ["bevy_remote"]
